--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <h1 class="hero-title">Turn the music up!</h1>
     </section>
                  <section class="selling-points container"> <!-- selling points -->
+                   <div class="clearfix">
+                <div style="float: left;" class="clearfix"></div>
+             </div>
              <div class="point column third">
                  <span class="ion-music-note"></span>
                  <h5 class="point-title">Choose your music</h5>
