--- a/album.html
+++ b/album.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="styles/player_bar.css">
     </head>
     <body class="album">
-        <nav class="navbar"> <!-- nav bar -->
+        <nav class="navbar">
             <a href="index.html"  class="logo">
                 <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
             </a>
@@ -47,7 +47,7 @@
                      </a>
                  </div>
                  <div class="control-group currently-playing">
-                   <h2 class="song-name">Lift Me Up</h2>
+                   <h2 class="song-name"></h2>
                    <div class="seek-control">
                          <div class="seek-bar">
                              <div class="fill"></div>
@@ -56,8 +56,8 @@
                          <div class="current-time">2:30</div>
                          <div class="total-time">4:45</div>
                      </div>
-                     <h2 class="artist-song-mobile">Lift Me Up - Broken Down</h2>
-                     <h3 class="artist-name">Broken Down</h3>
+                     <h2 class="artist-song-mobile"></h2>
+                     <h3 class="artist-name"></h3>
                  </div>
                  <div class="control-group volume">
                    <span class="ion-volume-high icon"></span>
@@ -69,6 +69,7 @@
              </div>
          </section>
          <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+         <script src="scripts/fixtures.js"></script>
          <script src="scripts/album.js"></script>
     </body>
 </html>
